# xc-chat

./: ._README.md  README.md
XCAndroid/: dump.rdb  settings.gradle
XCAndroid/app/: build.gradle
XCAndroid/app/src/main/: AndroidManifest.xml
XCAndroid/app/src/main/res/drawable/: li_bg_button_room_chat.xml  li_bg_message_chat.xml  li_bg_message_other.xml  li_bg_popwindow_from_bottom.xml  li_room_msg_edit_cursor_color.xml  user_level_bg_level_1.xml  user_level_bg_level_2.xml  (+3 more)
XCAndroid/gradle/wrapper/: gradle-wrapper.properties
XCAndroid/modules/HttpLibrary/: build.gradle
XCAndroid/modules/HttpLibrary/src/main/: AndroidManifest.xml
XCAndroid/modules/XCServerLibrary/: build.gradle
XCAndroid/modules/XCServerLibrary/protobuf/: make.sh  xc_protoc.proto
XCAndroid/modules/XCServerLibrary/src/main/: AndroidManifest.xml
xc_server_clion/: CMakeLists.txt  dump.rdb  main.cpp
xc_server_clion/consts/: RedisConsts.h
xc_server_clion/define/: BeanDefine.h
xc_server_clion/manager/: XCManager.cpp  XCManager.h
xc_server_clion/protoc/: create_proto_file.sh  xc_protoc.pb.cc  xc_protoc.pb.h  xc_protoc.proto
xc_server_clion/services/: IOnlineUserService.h  IRoomService.h
xc_server_clion/services/impl/: OnlineUserService.cpp  OnlineUserService.h  XCRoomService.cpp  XCRoomService.h
xc_server_clion/tcp/: tcp_poll_server.c  tcp_poll_server.h
xc_server_clion/utils/: NetUtils.h  PackConsts.h  PackUtils.h  TypeUtils.h
xc_web_server/: README.md  pom.xml
xc_web_server/sql/: t_xc_user.sql
xc_web_server/src/main/resources/: application.properties
(+79 files in other folders)
